# mtl-rs

./: .gitattributes  .gitignore  Cargo.toml  EXAMPLES_PLAN.md  README.md  build.rs  rustfmt.toml
.zed/: settings.json
book/: book.toml
book/book/: 404.html  introduction.html  print.html  searcher-c2a407aa.js  toc-cc3a64fa.js  toc.html
book/src/: SUMMARY.md  introduction.md
examples/: accelerating_ray_tracing_and_motion_blur_using_metal.rs  accelerating_ray_tracing_using_metal.rs  achieving_smooth_frame_rates_with_a_metal_display_link.rs  adjusting_the_level_of_detail_using_metal_mesh_shaders.rs  calculating_primitive_visibility_using_depth_testing.rs  capturing_metal_commands_programmatically.rs  combining_blit_and_compute_operations_in_a_single_pass.rs  control_the_ray_tracing_process_using_intersection_queries.rs  creating_a_3d_application_with_hydra_rendering.rs  creating_a_custom_metal_view.rs  creating_a_metal_dynamic_library.rs  creating_and_sampling_textures.rs  culling_occluded_geometry_using_the_visibility_result_buffer.rs  customizing_a_pytorch_operation.rs  customizing_a_tensorflow_operation.rs  customizing_render_pass_setup.rs  drawing_a_triangle_with_metal_4.rs  encoding_argument_buffers_on_the_gpu.rs  encoding_indirect_command_buffers_on_the_cpu.rs  encoding_indirect_command_buffers_on_the_gpu.rs  implementing_a_multistage_image_filter_using_heaps_and_events.rs  implementing_a_multistage_image_filter_using_heaps_and_fences.rs  implementing_order_independent_transparency_with_image_blocks.rs  improving_edge_rendering_quality_with_msaa.rs  loading_textures_and_models_using_metal_fast_resource_loading.rs  managing_groups_of_resources_with_argument_buffers.rs  migrating_opengl_code_to_metal.rs  mixing_metal_and_opengl_rendering_in_a_view.rs  modern_rendering_with_metal.rs  performing_calculations_on_a_gpu.rs  processing_a_texture_in_a_compute_function.rs  processing_hdr_images_with_metal.rs  reading_pixel_data_from_a_drawable_texture.rs  rendering_a_curve_primitive_in_a_ray_tracing_scene.rs  rendering_a_scene_with_deferred_lighting_in_c_plus_plus.rs  rendering_a_scene_with_deferred_lighting_in_objective_c.rs  rendering_a_scene_with_forward_plus_lighting_using_tile_shaders.rs  rendering_reflections_in_real_time_using_ray_tracing.rs  rendering_reflections_with_fewer_render_passes.rs  rendering_terrain_dynamically_with_argument_buffers.rs  (+9 more)
examples/common/: mod.rs
examples/drawing_a_triangle_with_metal_4/: main.rs  renderer.rs  vertex_data.rs
src/: allocation.rs  argument_encoder.rs  buffer.rs  capture_scope.rs  data_type.rs  device_certification.rs  fence.rs  function_constant_values.rs  function_handle.rs  gpu_address.rs  lib.rs  linked_functions.rs  pixel_format.rs  prelude.rs  util.rs
src/acceleration_structure/: acceleration_structure.rs  bounding_box_geometry_descriptor.rs  curve_basis.rs  curve_end_caps.rs  curve_geometry_descriptor.rs  curve_type.rs  descriptor.rs  geometry_descriptor.rs  indirect_acceleration_structure_instance_descriptor.rs  indirect_acceleration_structure_motion_instance_descriptor.rs  indirect_instance_acceleration_structure_descriptor.rs  instance_acceleration_structure_descriptor.rs  instance_descriptor.rs  instance_descriptor_type.rs  instance_options.rs  matrix_layout.rs  mod.rs  motion_border_mode.rs  motion_bounding_box_geometry_descriptor.rs  motion_curve_geometry_descriptor.rs  motion_instance_descriptor.rs  motion_keyframe_data.rs  motion_triangle_geometry_descriptor.rs  primitive_acceleration_structure_descriptor.rs  refit_options.rs  sizes.rs  transform_type.rs  triangle_geometry_descriptor.rs  usage.rs  user_id_instance_descriptor.rs
src/acceleration_structure_command_encoder/: command_encoder.rs  mod.rs  pass_descriptor.rs  sample_buffer_attachment_descriptor.rs  sample_buffer_attachment_descriptor_array.rs
src/acceleration_structure_types/: axis_aligned_bounding_box.rs  component_transform.rs  mod.rs  packed_float3.rs  packed_float4x3.rs  packed_float_quaternion.rs
src/argument/: argument.rs  argument_descriptor.rs  argument_type.rs  array_type.rs  binding.rs  binding_access.rs  binding_type.rs  index_type.rs  mod.rs  pointer_type.rs  struct_member.rs  struct_type.rs  texture_reference_type.rs  type_reflection.rs
src/binary_archive/: binary_archive.rs  binary_archive_descriptor.rs  constants.rs  error.rs  mod.rs
src/blit_command_encoder/: blit_command_encoder.rs  blit_option.rs  mod.rs
src/blit_pass/: blit_pass_descriptor.rs  mod.rs  sample_buffer_attachment_descriptor.rs  sample_buffer_attachment_descriptor_array.rs
src/capture_manager/: descriptor.rs  (+4 more)
(+516 files in other folders)
