[package]
name = "mtl-rs"
version = "0.1.5"
edition = "2024"
license = "MIT"
authors = ["Eugene Bokhan <eugenebokhan@icloud.com>"]
description = "Rust bindings for Apple's Metal API"
readme = "README.md"
keywords = ["metal", "graphics", "apple", "macos", "ios"]
categories = [
    "api-bindings",
    "graphics",
    "os::macos-apis",
    "rendering::graphics-api",
]
repository = "https://github.com/computer-graphics-tools/mtl-rs"

[dependencies]
core-graphics-types = { version = "0.2", default-features = false }
core-graphics = "0.25"
bytemuck = { version = "1.25", features = ["derive"] }
libc = "0.2"

objc2 = { version = "0.6" }
objc2-foundation = { version = "0.3" }
objc2-core-foundation = { version = "0.3" }
objc2-io-surface = { version = "0.3" }
dispatch2 = { version = "0.3" }
block2 = { version = "0.6" }
once_cell = { version = "1.21" }
bitflags = "2.10"

[lib]
name = "metal"
path = "src/lib.rs"
