[package]
name = "mtl-rs"
version = "0.1.9"
edition = "2024"
license = "MIT"
authors = ["Eugene Bokhan <eugenebokhan@icloud.com>"]
description = "Rust bindings for Apple's Metal API"
readme = "README.md"
keywords = ["metal", "graphics", "apple", "macos", "ios"]
categories = [
    "api-bindings",
    "graphics",
    "os::macos-apis",
    "rendering::graphics-api",
]
repository = "https://github.com/computer-graphics-tools/mtl-rs"

[dependencies]
objc2 = { version = "0.6" }
objc2-foundation = { version = "0.3" }
objc2-core-foundation = { version = "0.3" }
objc2-io-surface = { version = "0.3" }
dispatch2 = { version = "0.3" }
block2 = { version = "0.6" }
bitflags = "2.11"

[dev-dependencies]
bytemuck = { version = "1.25", features = ["derive"] }
winit = "0.30"
objc2-foundation = { version = "0.3", features = ["NSError", "NSString"] }
objc2-app-kit = { version = "0.3", features = [
    "NSView",
    "NSWindow",
    "NSResponder",
    "objc2-quartz-core",
    "objc2-core-foundation",
] }
objc2-quartz-core = { version = "0.3", features = [
    "CAMetalLayer",
    "CALayer",
    "objc2-metal",
] }
raw-window-handle = "0.6"

[lib]
name = "metal"
path = "src/lib.rs"
